--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
                 <li><a href='?page=contactus'>CONTACT US </a></li>
                 <!-- icons social and phone -->
                 <li class="socialIcon"><a href="call:111-111-111"><i class="bi bi-telephone-forward"></i></a></li>
-                <li class="socialIcon"><a href="instgram.com/example"><i class="bi bi-instagram"></i></a></li>
+                <li class="socialIcon"><a href="https://www.instagram.com/accounts/login/"><i class="bi bi-instagram"></i></a></li>
                 <li class="socialIcon"><a href="mailto:example@example.com"><i class="bi bi-envelope-fill"></i></a></li>
             </ul>
         </nav>
